fixed typo in q13

--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -427,7 +427,7 @@ Therefore, the significance of this test is
 The question specifically asks for \(c\) and \(\alpha\) when \(\theta_* = 0\), \(\varphi = 1\), \(\pi_* = 0.95\), and \(n = 16\). In this case, we have 
 \(z_{\pi_*} = \Phi^{-1}(0.05) \approx -1.64\), which means \(c = 1 - 1.64 / 4 = 0.589\) and \(\alpha = 1 - \Phi(4 - 1.64) = 0.00926\). Put more formally,
 if we have a random sample \(\bm{X} \overset{\mathrm{iid}}{\sim} \mathrm{N}(\theta,1)\), and want to test \(H_0 : \theta \le 0\) against \(H_A : \theta > 0\)
-using a UMP test with a power of \(0.95\) at \(\theta = 1\), then our test is given by \(\delta^* :\) reject \(H_0\) if \(\bar(X) \ge 0.589\). 
+using a UMP test with a power of \(0.95\) at \(\theta = 1\), then our test is given by \(\delta^* :\) reject \(H_0\) if \(\bar{X} \ge 0.589\). 
 With 16 observations, the size of this test is \(\alpha = 0.00926\). 
 
 %' ============================================================================================================================================================
