--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -169,8 +169,14 @@ variables, our test statistic is also a Poisson random variable, namely \(Y \sim
 \begin{align*}
     \pi(\theta \,|\, \delta)
     = \mathrm{Pr}(Y \in \mathcal{S}_Y \,|\, \theta)
+    = \mathrm{Pr}(Y \le 2 \,|\, \theta)
     = \sum_{k=0}^2 \frac{(n\theta)^k \mathrm{e}^{-n\theta}}{k!}.
 \end{align*}
+A graph of \(\pi(\theta\,|\,\delta)\) can be found in the left panel of Figure \ref{q06-power-function} for when \(n = 12\).
+% , where we can see the maximum value occurs as \(\theta \to 0\). 
+The values of \(\pi(\theta\,|\,\delta)\) when \(\theta = \{1/2,1/3,1/4,1/6,1/12\}\) are given by 
+\(0.062, 0.238, 0.423, 0.677, 0.920\), respectively, and have also been marked on Figure \ref{q06-power-function}.
+The significance of this test is given by \(\alpha(\delta) = \pi(1/2 \,|\, \delta) = 0.062\).
 \begin{figure}
     \centering
     \includegraphics[width = 0.45\textwidth]{img/q06-power-function.png}
@@ -179,11 +185,6 @@ variables, our test statistic is also a Poisson random variable, namely \(Y \sim
     \caption{The power functions \(\pi(\theta \,|\, \delta)\) (question 6) and \(\pi(\sigma^2 \,|\, \delta)\) (question 8).}
     \label{q06-power-function}
 \end{figure}
-A graph of \(\pi(\theta\,|\,\delta)\) can be found in the left panel of Figure \ref{q06-power-function}.
-% , where we can see the maximum value occurs as \(\theta \to 0\). 
-The values of \(\pi(\theta\,|\,\delta)\) when \(\theta = \{1/2,1/3,1/4,1/6,1/12\}\) are given by 
-\(0.062, 0.238, 0.423, 0.677, 0.920\), respectively, and have also been marked on Figure \ref{q06-power-function}.
-The significance of this test is given by \(\alpha(\delta) = \pi(1/2 \,|\, \delta) = 0.062\).
 
 %' ============================================================================================================================================================
 \section{Question 7} \noindent
