--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -96,6 +96,7 @@ reject \(H_0\) if \(X \le 3\). That is, our rejection region is \(\mathcal{S}_X 
 \begin{align*}
     \pi(p \,|\, \delta)
     = \mathrm{Pr}(X \in \mathcal{S}_X \,|\, p)
+    % = \mathrm{Pr}(X \le 4 \,|\, p)
     = \sum_{k=0}^3 \binom{10}{k} p^k (1 - p)^{n - k}.
     % = (1 - p)^{10} + 10 p (1 - p)^9 + 45 p^2 (1 - p)^8 + 120 p^3 (1 - p)^7.
 \end{align*}
@@ -169,7 +170,7 @@ variables, our test statistic is also a Poisson random variable, namely \(Y \sim
 \begin{align*}
     \pi(\theta \,|\, \delta)
     = \mathrm{Pr}(Y \in \mathcal{S}_Y \,|\, \theta)
-    = \mathrm{Pr}(Y \le 2 \,|\, \theta)
+    % = \mathrm{Pr}(Y \le 2 \,|\, \theta)
     = \sum_{k=0}^2 \frac{(n\theta)^k \mathrm{e}^{-n\theta}}{k!}.
 \end{align*}
 A graph of \(\pi(\theta\,|\,\delta)\) can be found in the left panel of Figure \ref{q06-power-function} for when \(n = 12\).
