fixed typo in q09

--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -244,7 +244,7 @@ as desired. A plot of \(\pi(\sigma^2 \,|\, \delta)\) can be found in the right p
 
 %' ============================================================================================================================================================
 \section{Question 9} \noindent
-If \(\bm{X} \overset{\mathrm{iid}}{\sim} \mathrm{N}(\mu, \sigma^2)\) with unknown \(\mu\) and \(\sigma^2\), then a \(\gamma\)\%{} confidence interval
+If \(\bm{X} \overset{\mathrm{iid}}{\sim} \mathrm{N}(\mu, \sigma^2)\) with unknown \(\mu\) and \(\sigma^2\), then a \(100\gamma\)\%{} confidence interval
 for \(\mu\) is given by 
 \begin{align*}
     \mathcal{I} = \Big( ~\bar{X} - t_{\gamma}(n) \cdot S / \sqrt{n} ~,~ \bar{X} + t_{\gamma}(n) \cdot S / \sqrt{n} ~ \Big),
