--- a/hwk/hwk03/hwk03-ans.tex
+++ b/hwk/hwk03/hwk03-ans.tex
@@ -61,4 +61,14 @@ which is a monotone increasing function of the test statistic \(\prod_{i=1}^n x_
 \(\prod_{i=1}^n X_i \ge c_*\), where \(c_*\) is chosen such that the test has a significance level \(\alpha_*\). Taking the log of both sides gives us 
 \(\sum_{i=1}^8 \log X_i \ge \log c_* \coloneqq k\). 
 
+%' ============================================================================================================================================================
+\section{Question 2} \noindent
+
+
+%' ============================================================================================================================================================
+\section{Question 8} \noindent
+By definition, the least-squares estimate for the intercept is \(\hat{\beta}_0 = \bar{y} - \hat{\beta}_1 \bar{x}\).
+Rearranging gives us \(\bar{y} = \hat{\beta}_0 + \hat{\beta}_1 \bar{x}\), and so the least-squares line \(y = \hat{\beta}_0 + \hat{\beta}_1 x\) will always 
+pass through the point \((\bar{x}, \bar{y})\).
+
 \end{document}
