--- a/hwk/hwk03/hwk03-ans.tex
+++ b/hwk/hwk03/hwk03-ans.tex
@@ -71,4 +71,10 @@ By definition, the least-squares estimate for the intercept is \(\hat{\beta}_0 =
 Rearranging gives us \(\bar{y} = \hat{\beta}_0 + \hat{\beta}_1 \bar{x}\), and so the least-squares line \(y = \hat{\beta}_0 + \hat{\beta}_1 x\) will always 
 pass through the point \((\bar{x}, \bar{y})\).
 
+%' ============================================================================================================================================================
+\section{Question 9} \noindent
+\begin{itemize}
+    \item[(a)] The least-squares coefficients for the model are given by \(\hat{\beta}_0 = 40.9\) and \(\hat{\beta}_1 = 0.548\).
+\end{itemize}
+
 \end{document}
