--- a/hwk/hwk03/hwk03-ans.tex
+++ b/hwk/hwk03/hwk03-ans.tex
@@ -88,13 +88,15 @@ Here we are assuming that \(Y = \beta_0 + \beta_1 x + \epsilon\), where \(\epsil
         % \hat{\beta}_{1,\mathrm{MLE}}
         \hat{\beta}_{1}
         = \frac{(\mathbf{y} - \bar{y}\mathbf{1})^T(\mathbf{x} - \bar{x}\mathbf{1})}{\| \mathbf{x} - \bar{x}\mathbf{1} \|^2}
-        = 0.685,
-        ~~~
+        = 0.685
+        % ~~~
+        ~,~
         % \hat{\beta}_{0,\mathrm{MLE}}
         \hat{\beta}_0
         = \bar{y} - \hat{\beta}_1 \bar{x}
-        = -0.786,
-        ~~~\mathrm{and}~~~
+        = -0.786
+        % ~~~\mathrm{and}~~~
+        ~,~
         % \hat{\sigma}^2_{\mathrm{MLE}}
         \hat{\sigma}^2
         = \frac{\| \mathbf{y} - \hat{\beta}_0 \mathbf{1} - \hat{\beta}_1 \mathbf{x} \|^2}{n}
@@ -105,7 +107,8 @@ Here we are assuming that \(Y = \beta_0 + \beta_1 x + \epsilon\), where \(\epsil
         \mathrm{Var}\big[ \hat{\beta}_1 \big]
         = \frac{\sigma^2}{\| \mathbf{x} - \bar{x}\mathbf{1} \|^2}
         = 0.0277 \sigma^2
-        ~~~\mathrm{and}~~~
+        % ~~~\mathrm{and}~~~
+        ~,~
         \mathrm{Var}\big[ \hat{\beta}_0 \big]
         = \sigma^2 \left( \frac{1}{n} + \frac{\bar{x}^2}{\| \mathbf{x} - \bar{x}\mathbf{1} \|^2} \right)
         = 0.25 \sigma^2.
@@ -115,7 +118,8 @@ Here we are assuming that \(Y = \beta_0 + \beta_1 x + \epsilon\), where \(\epsil
         \mathrm{Cov}\big[ \hat{\beta}_0, \hat{\beta}_1 \big]
         = - \frac{\bar{x} \sigma^2}{\| \mathbf{x} - \bar{x}\mathbf{1} \|^2}
         = -0.0646 \sigma^2
-        ~~~\mathrm{and}~~~
+        % ~~~\mathrm{and}~~~
+        ~,~
         \mathrm{Cor}\big[ \hat{\beta}_0, \hat{\beta}_1 \big] 
         % = \frac{\mathrm{Cov}\big[ \hat{\beta}_0, \hat{\beta}_1 \big]}{\sqrt{\mathrm{Var}\big[ \hat{\beta}_0 \big]} \cdot \sqrt{\mathrm{Var}\big[ \hat{\beta}_1 \big]}}
         = \frac{\mathrm{Cov}\big[ \hat{\beta}_0, \hat{\beta}_1 \big]}{\sqrt{\mathrm{Var}\big[ \hat{\beta}_0 \big] \cdot \mathrm{Var}\big[ \hat{\beta}_1 \big]}}
@@ -123,5 +127,9 @@ Here we are assuming that \(Y = \beta_0 + \beta_1 x + \epsilon\), where \(\epsil
         = -0.775.
     \end{align*}
 \end{itemize}
+
+%' ============================================================================================================================================================
+\section{Question 11} \noindent
+
 
 \end{document}
