--- a/hwk/hwk03/hwk03-ans.tex
+++ b/hwk/hwk03/hwk03-ans.tex
@@ -130,6 +130,14 @@ Here we are assuming that \(Y = \beta_0 + \beta_1 x + \epsilon\), where \(\epsil
 
 %' ============================================================================================================================================================
 \section{Question 11} \noindent
-
+Suppose \(\beta_0, \beta_1\) are the coefficients from the linear model in question 10, and we want to estimate \(\theta = 3 \beta_0 - 2 \beta_1 + 5\).
+Because \(\hat{\beta}_0\) and \(\hat{\beta}_1\) are unbiased estimators for the coefficients, we can estimate \(\theta\)
+with \(\hat{\theta} = 3 \hat{\beta}_0 - 2 \hat{\beta}_1 + 5\). The MSE of \(\hat{\theta}\), which is just its variance, is given by 
+\begin{align*}
+    \mathbb{E}\Big[ (\hat{\theta} - \theta)^2 \Big]
+    = \mathrm{Var} \big[ 3 \hat{\beta}_0 - 2 \hat{\beta}_1 + 5 ] 
+    = 9 \mathrm{Var}\big[ \hat{\beta}_0 \big] + 4 \mathrm{Var}\big[ \hat{\beta}_1 \big] - 6 \mathrm{Cov}\big[ \hat{\beta}_0, \hat{\beta}_1 \big]
+    = 10.549 \sigma^2.
+\end{align*}
 
 \end{document}
