--- a/hwk/hwk03/hwk03-ans.tex
+++ b/hwk/hwk03/hwk03-ans.tex
@@ -123,6 +123,12 @@ We reject \(H_0\) if \(Q \ge q_{\alpha}\), where \(q_{\alpha}\) is the \(1 - \al
 When \(\alpha = 0.01\), we have \(q_{0.01} = 6.635\).
 
 %' ============================================================================================================================================================
+\section{Question 7} \noindent
+From this data set, it is possible to see how the proportions of depression levels changed for the patients that took the drug. However, becuase there is no 
+control group to compare the results to another type of treatment (like another drug or a placebo), we cannot tell if the changed in proportions are any 
+more significant relative to another treatment. 
+
+%' ============================================================================================================================================================
 \section{Question 8} \noindent
 By definition, the least-squares estimate for the intercept is \(\hat{\beta}_0 = \bar{y} - \hat{\beta}_1 \bar{x}\).
 Rearranging gives us \(\bar{y} = \hat{\beta}_0 + \hat{\beta}_1 \bar{x}\), and so the least-squares line \(y = \hat{\beta}_0 + \hat{\beta}_1 x\) will always 
