updated format of q09

--- a/hwk/hwk03/hwk03-ans.tex
+++ b/hwk/hwk03/hwk03-ans.tex
@@ -142,9 +142,10 @@ pass through the point \((\bar{x}, \bar{y})\).
 
 %' ============================================================================================================================================================
 \section{Question 9} \noindent
-\begin{itemize}
-    \item[(a)] The least-squares coefficients for the model are given by \(\hat{\beta}_0 = 40.893\) and \(\hat{\beta}_1 = 0.548\).
-\end{itemize}
+% \begin{itemize}
+%     \item[(a)] The least-squares coefficients for the model are given by \(\hat{\beta}_0 = 40.893\) and \(\hat{\beta}_1 = 0.548\).
+% \end{itemize}
+The least-squares coefficients for the model are given by \(\hat{\beta}_0 = 40.893\) and \(\hat{\beta}_1 = 0.548\) (done using \texttt{R}).
 
 %' ============================================================================================================================================================
 \section{Question 10} \noindent
