removed last question

--- a/hwk/hwk03/hwk03-ans.tex
+++ b/hwk/hwk03/hwk03-ans.tex
@@ -222,7 +222,7 @@ Using this linear model, when \(x = 2\), we predict \(\hat{Y} = -0.786 _ 0.685 \
 \end{align*}
 
 %' ============================================================================================================================================================
-\section{Question 13} \noindent
+% \section{Question 13} \noindent
 
 
 \end{document}
